[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "timeline"
authors = [
	{name = "Jan Engels", email = "jan.engels@desy.de"},
]
maintainers = [
  {name = "Stefan Dietrich", email = "stefan.dietrich@desy.de"},
]
description = "Repository Management Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["version"]
dependencies = [
    "lockfile",
]

[project.scripts]
mrepo = "timeline.cli:main"

[project.urls]
Repository = "https://github.com/desyops/repository-timeline"

[tool.setuptools_scm]

